debug error nep-5  not showing correct balance

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,3 +12,9 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
